rabbitmq_traffic/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: rabbitmq-app
spec:
  type: NodePort
  ports:
   - name: http
     protocol: TCP
     port: 15672
  #   targetPort: 15672
  #   nodePort: 31672
   - name: amqp
     protocol: TCP
     port: 5672
   - name: epmd
     protocol: TCP
     port: 4369
   #  targetPort: 5672
   #  nodePort: 30672
  selector:
    app: rabbitmq-app
